# raise

./: .ci-health  .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.fr.md  README.md  add-json-db-module.sh  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  raise.code-workspace  tailwind.config.js  tsconfig.json  vite.config.ts
blockchain-engine/chaincode/: Cargo.toml  Dockerfile  README.md
blockchain-engine/chaincode/src/: chaincode.rs  contract.rs  ledger.rs  lib.rs  main.rs
blockchain-engine/shared/: Cargo.toml  README.md  build.rs
blockchain-engine/shared/protos/: chaincode.proto
blockchain-engine/shared/src/: lib.rs
crates/raise-desktop/: Cargo.toml  build.rs  raise-desktop.cdx.json  tauri.conf.json
crates/raise-desktop/src/: main.rs
crates/raise-desktop/src/commands/: ai_commands.rs  blockchain_commands.rs  codegen_commands.rs  cognitive_commands.rs  dl_commands.rs  genetics_commands.rs  gnn_commands.rs  json_db_commands.rs  model_commands.rs  rules_commands.rs  traceability_commands.rs  training_commands.rs  utils_commands.rs  voice_commands.rs  workflow_commands.rs
crates/raise-desktop/ui/: package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
crates/raise-desktop/ui/tests/: setup.ts
crates/raise-edge/: Cargo.toml  raise-edge.cdx.json
crates/raise-edge/src/: main.rs
src-tauri/: Cargo.toml  README.md  genaptitude.cdx.json  raise.cdx.json  tauri.conf.json  test_mod.rs
src-tauri/.raise_storage/chats/: main_session.json
src-tauri/capabilities/: default.json
src-tauri/data/schemas/: demo.json
src-tauri/locales/: de.json  en.json  es.json  fr.json
src-tauri/src/: README.md  lib.rs  main.rs
src-tauri/src/ai/: README.md  mod.rs  orchestrator.rs  rag_integration_test.rs
src-tauri/src/ai/agents/: README.md  business_agent.rs  context.rs  data_agent.rs  dynamic_agent.rs  epbs_agent.rs  hardware_agent.rs  intent_classifier.rs  mod.rs  orchestrator_agent.rs  prompt_engine.rs  software_agent.rs  system_agent.rs  tools.rs  transverse_agent.rs
src-tauri/src/ai/assurance/: README.md  health.rs  mod.rs  quality.rs  xai.rs
src-tauri/src/blockchain/: README.md  client.rs  dev_client.rs  error.rs  mod.rs
src-tauri/src/code_generator/: DOCS_ERROR_HANDLING.md  README.md  diff.rs  graph.rs  graph_weaver.rs  mod.rs  models.rs  module_weaver.rs  reconciler.rs  utils.rs  weaver.rs
src-tauri/src/commands/: README.md  ai_commands.rs  blockchain_commands.rs  codegen_commands.rs  cognitive_commands.rs  dl_commands.rs  genetics_commands.rs  gnn_commands.rs  json_db_commands.md  json_db_commands.rs  jsoon_db_test_session.rs  mod.rs  model_commands.rs  rules_commands.rs  traceability_commands.rs  training_commands.rs  utils_commands.rs  voice_commands.rs  workflow_commands.rs
src-tauri/src/genetics/: README.md  bridge.rs  commands.rs  dto.rs  engine.rs  handler.rs  mod.rs  traits.rs  types.rs
src-tauri/src/graph_store/: README.md  mod.rs  surreal_impl.rs
src-tauri/src/json_db/: README.md  json_db.md  mod.rs  test_utils.rs
src-tauri/src/kernel/: assets.rs  mod.rs  state.rs
src-tauri/src/model_engine/: README.md  ingestion.rs  loader.rs  mod.rs  tests.rs  types.rs
src-tauri/src/plugins/: ARCHITECTURE_BRIDGE.md  README.md  cognitive.rs  manager.rs  mod.rs  runtime.rs  tests.rs
src-tauri/src/rules_engine/: README.md  analyzer.rs  ast.rs  evaluator.rs  mod.rs  store.rs
src-tauri/src/spatial_engine/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/traceability/: README.md  change_tracker.rs  impact_analyzer.rs  mod.rs  tracer.rs
src-tauri/src/utils/: README.md  compression.rs  config copy.rs  config.rs  env.rs  error.rs  fs.rs  i18n.rs  json.rs  logger.rs  macros.rs  mock.rs  mod.rs  net.rs  os.rs  prelude.rs  session.rs
src-tauri/src/workflow_engine/: README.md  _old_README.md  compiler.rs  critic.rs  executor.rs  mandate.rs  mod.rs  policy.rs  rbac.rs  scheduler.rs  squad.rs  state_machine.rs  wasm_host.rs
src-tauri/temp_domain/instance_93/: world_model.safetensors
src-tauri/temp_domain/instance_94/: world_model.safetensors
src-tauri/temp_domain/instance_95/: world_model.safetensors
src-tauri/temp_domain/instance_96/: world_model.safetensors
src-tauri/temp_domain/instance_97/: world_model.safetensors
src-tauri/tests/: README.md  ai_suite.rs  code_gen_suite.rs  config.test.json  genetics_suite.rs  integration_e2e.rs  json_db_errors.rs  json_db_idempotent.rs  json_db_integration.rs  json_db_lifecycle.rs  json_db_suite.rs  json_db_tests.md  rules_suite.rs  schema_minimal.rs
src-tauri/tests/ai_suite/: README.md  agent_tests.rs  business_agent_tests.rs  data_agent_tests.rs  deep_learning_tests.rs  epbs_agent_tests.rs  hardware_agent_tests.rs  llm_tests.rs  mod.rs  software_agent_tests.rs  system_agent_tests.rs  transverse_agent_tests.rs
src-tauri/tests/code_gen_suite/: README.md  __mod.rs  agent_tests.rs  mod.rs  rust_tests.rs
src-tauri/tests/common/: mod copy.rs  mod.rs
src-tauri/tests/genetics_suite/: __mod.rs  full_flow_test.rs  integration_test.rs
src-tauri/tests/json_db_suite/: README.md  dataset_integration.rs  integration_suite.rs  json_db_errors.rs  json_db_idempotent.rs  json_db_indexes_ops.rs  json_db_integration.rs  json_db_lifecycle.rs  json_db_query_integration.rs  json_db_sql.rs  mod.rs  schema_consistency.rs  schema_minimal.rs  workunits_x_compute.rs
src-tauri/tests/rules_suite/: __mod.rs  lists_integration.rs  logic_scenarios.rs  rules_integration.rs  stdlib_tests.rs
src-tauri/tools/ai_cli/: Cargo.toml  README.md
src-tauri/tools/jsondb_cli/: Cargo.toml  jsondb_cli.md
src-tauri/tools/raise-cli/: Cargo.toml  README.md
src-tauri/tools/trainer/: README.md  requirements.txt  train.py
src-tauri/tools/validator_cli/: Cargo.toml
src-wasm/: Cargo.toml  README.md  build.sh  ga_wasm.cdx.json
src-wasm/blocks/analyzer-consistency/: Cargo.toml
src-wasm/blocks/governance/: Cargo.toml
src-wasm/blocks/spy-plugin/: Cargo.toml
src-wasm/core-api/: Cargo.toml
src-wasm/core-api/src/: lib.rs
(+904 files in other folders)
