[workspace]
members = ["src-tauri", "src-tauri/tools/raise-cli"]
exclude = ["src-wasm", "wasm-modules"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
thiserror = "2.0.17"
anyhow = "1.0"
wasmtime = "41.0.0"

# Profils valables pour tout le workspace (évitent les warnings)
[profile.dev]
incremental = true
opt-level = 0
debug = 2            # Réduit drastiquement la RAM utilisée par le linker (défaut: 2)
split-debuginfo = "off" # Aide sur Linux à ne pas tout charger en mémoire d'un coup
strip = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
