[package]
name = "raise"
version = "0.1.0"
description = "Plateforme d'Ingénierie Multi-Domaines à Interface IA Native"
authors = ["raise Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Cœur Tauri ---
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# --- Sérialisation & Données ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
quick-xml = { version = "0.39.0", features = ["serialize"] }

# --- Validation & Traitement ---
regex = "1.10"
pest = "2.7"
pest_derive = "2.7"

# --- Asynchrone & Runtime ---
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
lru = "0.16.3"

# --- Utilitaires Système & Fichiers ---
anyhow = "1.0"
thiserror = "2.0"
walkdir = "2"
pathdiff = "0.2"
url = "2.5"
tempfile = "3.10"
zstd = "0.13"


wasmtime = "41.0.3" # --- Plugins & Runtime WASM  ---

# Requis pour l'embarquement des schémas (file_storage.rs)
include_dir = "0.7"
dirs = "6.0.0"

# --- Logs & Traçabilité ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"

# --- UUID & Temps ---
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
rand = "0.10.0"


# --- Algorithme Génétique ---
rayon = "1.10"       # Pour le parallélisme (par_iter)
rand_distr = "0.6.0" # Pour la distribution Gaussienne (Mutation)
rand_core = "0.10.0"    # Pour exposer le trait RngCore  

# --- MOTEUR IA & NLP  ---
reqwest = { version = "0.13.1", features = ["json", "blocking", "multipart"] }
text-splitter = "0.29.0"
tiktoken-rs = "0.9.1"

# --- STACK IA NATIVE (CANDLE) ---
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
safetensors = "0.7.0"


tokenizers = { version = "0.22.2", features = ["http"] }
fastembed = "5.5.0"

# --- BASE DE DONNÉES & QUERY ---
sqlparser = { version = "0.61.0", features = ["serde"] }
 
# --- GÉNÉRATION DE CODE ---
tera = "1.19"
heck = "0.5.0" # Indispensable pour camelCase, SnakeCase, etc.


# --- CRYPTO ---
ed25519-dalek = { version = "2.1", features = [
    "rand_core",
    "serde",
] } # Pour la signature
sha2 = "0.10" # Pour le hash du mandat
hex = "0.4" # Pour manipuler les signatures en string
futures = "0.3.31"
async-recursion = "1.1.1"


# --- BLOCKCHAIN (Fabric & VPN) ---
libp2p = { version = "0.56", features = [
    "kad",
    "gossipsub",
    "request-response",
    "cbor",
    "macros",
    "tcp",
    "noise",
    "yamux",
    "dns",
    "tokio",
] }
getrandom = { version = "0.4.1", features = ["wasm_js"] }

serde_yaml = "0.9" # Pour lire connection-profile.yaml
tonic = { version = "0.14.3", features = [
    "tls-ring",
    "tls-webpki-roots",
    "transport",
    "codegen",
] } # Client gRPC asynchrone
prost = "0.13" # Protocol Buffers (pour Tonic)

# raise-shared = { path = "../blockchain-engine/shared" } # Le pont vers vos définitions Protobuf

# --- Dépendances de développement (Pour les tests) ---
[dev-dependencies]
serial_test = "3.3.1"
tempfile = "3.10" # Manquant pour transactions/tests.rs



[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda"
]
