[workspace]
resolver = "2"

members = ["core-api", "blocks/analyzer-consistency", "blocks/spy-plugin"]

[workspace.dependencies]
# Sérialisation (JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Gestion d'erreurs (C'est ce qui manquait !)
thiserror = "2.0.17"
anyhow = "1.0"

# Outils WASM (Indispensable si core-api s'en sert)
wasm-bindgen = "0.2"

# Notre API interne
genaptitude-core-api = { path = "core-api" }
