[package]
name = "raise-chaincode"
version = "0.1.0"
edition = "2021"

[dependencies]
raise-shared = { path = "../shared" }
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Runtime : 0.14.3 (Compatible Tauri)
tonic = { version = "0.14.3", features = [
    "tls-ring",
    "tls-webpki-roots",
    "transport",
    "codegen",
    "prost",
] }

prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

http = "1.1"
http-body = "1.0"
http-body-util = "0.1"
bytes = "1.6"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
# CORRECTION CRITIQUE : On passe sur Git pour avoir les features manquantes
tonic-build = { git = "https://github.com/hyperium/tonic", features = [
    "prost",
    "transport",
] }
