[package]
name = "raise-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Runtime : 0.14.3 (Compatible Tauri)
tonic = { version = "0.14.3", features = ["transport", "codegen"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
# CORRECTION : Doit être identique à chaincode
tonic-build = { git = "https://github.com/hyperium/tonic", features = [
    "prost",
    "transport",
] }
