[package]
name = "raise-edge"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
raise-core = { path = "../raise-core", default-features = false }

# 2. Dépendances héritées du Workspace racine
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
wasmtime.workspace = true



# 3. Serveur réseau ultra-léger et asynchrone (Pour les Pi 3)
tokio = { version = "1.40", features = ["full"] }
axum = "0.8.9"
openssl = { version = "0.10", features = ["vendored"] }