[package]
name = "raise-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Gestion d'erreurs
anyhow = "1"
thiserror = "2.0.18" # Ajout requis pour error.rs

# Parsing d'arguments (Cœur du CLI)
clap = { version = "4.4", features = ["derive", "env"] }

# Sérialisation / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environnement & Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

# parsing du Shell Global
shell-words = "1.1"
rustyline = "17.0.2"


# Runtime Async
tokio = { version = "1", features = ["full"] }

# Utilitaires
uuid = { version = "1", features = ["v4"] }
dirs = "6.0.0"

[dependencies.raise]
path = "../.."


[features]
default = []
# 🎯 Le pont : active la feature "cuda" du paquet "raise"
cuda = ["raise/cuda"]

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.25.0"
