[package]
name = "analyzer-consistency"
version = "0.1.0"
edition = "2021"

# 👇 C'EST CETTE SECTION QUI MANQUAIT POUR AVOIR LE FICHIER .WASM
[lib]
crate-type = ["cdylib"]

[dependencies]
raise-core-api = { path = "../../core-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
